[package]
name = "dtld-ibverbs"
version = "0.1.0"
edition = "2024"

[lib]
name = "bluerdma_rust"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
env_logger = "0.11.6"
log = "0.4.25"
blue-rdma-driver = { path = "../blue-rdma-driver", version = "0.1.0" }

# FFI bindings, may replaced with bindgen in the future
ffi = { package = "ibverbs-sys", version = "=0.3.1" }
