[package]
authors = ["DatenLord <dev@datenlord.io>"]
categories = ["Driver"]
keywords = ["RDMA", "Driver"]
description = "Blue RDMA Driver"
license = "Apache-2.0"
repository = "todo"
name = "blue-rdma-driver"
version = "0.1.0"
edition = "2021"

[features]
default = ["page_size_4k"]
page_size_2m = []
page_size_4k = []

[dependencies]
bilge = "0.2.0"
bitvec = "1.0.1"
libc = "0.2.168"
memmap2 = "0.9.5"
parking_lot = "0.12.3"
bluesimalloc = { path = "../bluesimalloc" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "virt_to_phy"
harness = false

[[bench]]
name = "ring_buffer"
harness = false

[[bench]]
name = "descriptor"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(emulation)'] }
